--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.metrics</groupId>
     <artifactId>com.metrics.sample</artifactId>
     <version>1.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	
 	<modules>
 		<module>com.metrics.optimization.core</module>
