--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,28 @@
 	<modules>
 		<module>com.metrics.javascript.poc</module>
 	</modules>
-	
+
+    <properties>
+        <java.version>1.7</java.version>
+        <slf4j.version>1.7.21</slf4j.version>
+        <javaee.version>7.0</javaee.version>
+        <rhino.engine.version>1.1.0</rhino.engine.version>
+        <rhino.mozilla.version>1.7.7.2</rhino.mozilla.version>
+        <junit.version>4.12</junit.version>
+        <commons.io.version>2.6</commons.io.version>
+        <commons.lang.version>3.7</commons.lang.version>
+
+        <argLine>-Xmx128m</argLine>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>6</source>
-                    <target>6</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
 
@@ -33,18 +46,6 @@
             </plugin>
         </plugins>
     </build>
-
-    <properties>
-        <slf4j.version>1.7.21</slf4j.version>
-        <javaee.version>7.0</javaee.version>
-        <rhino.engine.version>1.1.0</rhino.engine.version>
-        <rhino.mozilla.version>1.7.7.2</rhino.mozilla.version>
-        <junit.version>4.12</junit.version>
-        <commons.io.version>2.6</commons.io.version>
-        <commons.lang.version>3.7</commons.lang.version>
-
-        <argLine>-Xmx128m</argLine>
-    </properties>
 
     <dependencyManagement>
         <dependencies>
